# agentic-trader-private

./: .gitignore  AGENTS.md  README.md  TRADER.md  alembic.ini  com.dylan.agentic-trader.plist  com.example.agentic-trader.plist  config.example.json  config.json  docker-compose.yml  pyproject.toml  run.sh
.claude/: settings.json
alembic/: env.py
apps/: README.md
archive/: journal.md  paper.md
db/: README.md
docs/: config.md  go-live-checklist.md  lanes.md  product-vision.md  risk-policy.md  runbook.md  screener.md  strategies.md  strategy.md
infra/: README.md
lanes/: README.md  execution.md  improve.md  research.md  review.md  risk.md  thesis.md
ops/: README.md  deploy.sh  install.sh  lane-wrapper.sh  notify.sh  run-lane.sh  uninstall.sh
scripts/: allocate.py  backtest.py  backtest_fleet.py  decide.py  decide_option.py  decide_with_quote.py  drawdown_kill.py  install-launchd.sh  load_config.py  market_calendar.py  option_gate.py  order_gate.py  paper.py  reconcile_state.py  replay_allocator.py  run_strategies.py  scoreboard.py  select_option_contract.py  select_sleeve.py  timezone.sh  yfinance_utils.py
state/: state.example.json  state.json
tests/: conftest.py  gate_helpers.py  m4_seed.py  test_allocate.py  test_allocator_record.py  test_backtest_fleet.py  test_cli.py  test_cli_m2.py  test_decide.py  test_decide_option.py  test_decide_with_quote.py  test_digest.py  test_drawdown_kill.py  test_envelope.py  test_equity_gate.py  test_gate_hooks.py  test_journal.py  test_kill_switch.py  test_lane_cli.py  test_launchd_timezone.py  test_ledger.py  (+20 more)
(+62 files in other folders)
