[project]
name = "trader"
version = "0.1.0"
description = "Aggressive autonomous trader: two sleeves, five lanes, hard outer envelope."
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pandas>=2.0",
    "yfinance>=0.2",
    "pydantic>=2.0",
]

[project.scripts]
trader = "trader.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
